# TextMeld

./: log.txt  pyproject.toml
.github/workflows/: python_publish.yml
tests/: conftest.py  test_analyzer.py  test_explore.py  test_gitignore.py  test_textmeld.py
textmeld/: textmeld.py
